# spnbsn-like

./: .gitignore  README.md  pyproject.toml
examples/: sbm_population_decay.yaml
scripts/: run_simulation.py  sweep_params.py
src/qcbath/: __init__.py  config.py
src/qcbath/dynamics/: ensemble.py  eom.py  trajectory.py
src/qcbath/dynamics/integrators/: base.py  rk4.py  velocity_verlet.py
src/qcbath/init/: bath_init.py  quantum_init.py
src/qcbath/io/: checkpoint.py  results.py
src/qcbath/model/: bath.py  hamiltonian.py  mapping.py  spin_boson.py
src/qcbath/observables/: coherences.py  energies.py  populations.py
src/qcbath/utils/: rng.py  units.py
tests/: test_eom_consistency.py  test_hamiltonian.py  test_integrators_short_time.py
